2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: allow \encoding in lyrics as well.

2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/GNUmakefile (STEPMAKE_TEMPLATES): Unset USER_LDFLAGS, no
	need to link to GUILE et al.

2004-11-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-music-properties.scm (all-music-properties): add
	quoted-context-type, quoted-context-id.

	* scm/lily.scm (type-check-list): new function.
	
	* scm/lily-library.scm: new file. Generic library routines.

	* lily/parser.yy (Generic_prefix_music): move typechecking out of
	parser.

	* ly/music-functions-init.ly: add quoteDuring function.

	* lily/include/music-iterator.hh (class Music_iterator): rename
	set_translator -> set_context

	* lily/parser.yy (Generic_prefix_music_scm): add
	MUSIC_FUNCTION_SCM_SCM_MUSIC

	* scm/lily.scm (sanitize-command-option): new function. (backportme)

	* scm/framework-tex.scm (header): sanitize TeX paper size.
	(backportme)

2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* elisp/lilypond-indent.el (LilyPond-indent-level): 2 is now standard.

	* tex/lilyponddefs.tex: If no inputencoding use latin1.  (backportme)

	* scm/framework-tex.scm (font-load-command): Use T1 if no
	font-encoding set.  (backportme)

	* scm/lily.scm (postscript->pdf): Remove .pdf file if it
	exists before converting.  (backportme)

	* scm/framework-tex.scm (convert-to-dvi): Remove .dvi file if it
	exists before converting.  (backportme)
	(convert-to-ps): Remove .ps file if it exists before
	converting.  (backportme)

	* lily/lexer.ll: Remove extra progress newline, use present tense.

	* scm/paper.scm (paper-alist): public.
	* scm/framework-tex.scm (convert-to-ps):
	* scm/lily.scm (postscript->pdf): Do not leak papersizename into
	command line.

2004-11-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (ly:system): add > /dev/null 2>&1 . (backportme)

	* lily/recording-group-engraver.cc (derived_mark): mark
	now_events_. (backportme)
