@@ -1,6 +1,17 @@
 2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
-	* lily/lexer.ll: allow \encoding in lyrics as well.
+	* lily/new-quote-iterator.cc (construct_children): set
+	quote_outlet_ if no quoted-context-{id,type} specified.
+
+	* scripts/convert-ly.py (conv): \quote -> \quoteDuring.
+
+	* lily/parser.yy (command_element): remove \quote.
+
+	* ly/music-functions-init.ly (location): add quoteDuring music
+	function. 
+
+	* lily/lexer.ll: allow \encoding in lyrics as well.  Remove
+	optional semicolon. (backportme)
 
 2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
